k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eramix
  labels:
    app.kubernetes.io/part-of: eramix
    environment: production
